# merise_gtk

./: .exrc  .gitattributes  .gitignore  README.md  default.nix  flake.nix  justfile  mkdocs.yml  nix  pyproject.toml
docs/: index.md
features/: project.feature
merise_gtk/: __init__.py  application.py  application.ui  merise_gtk.cmb  merise_gtk.css  merise_gtk.gresource.xml  merise_gtk.ui  window.py  window.ui
merise_gtk/app/: __init__.py  app.gresource.xml  mgtk_window.ui  mtgk.css
merise_gtk/model/: project.py
po/: LINGUAS  POTFILES  en.po  fr_FR.po  merise_gtk.pot
