[project]
name = "merise_gtk"
description = "GTK interface for merise_dot"
license = "GPL-3.0-only"
dynamic = [ "version" ]
requires-python = ">=3.8"
dependencies = [
    "merise_dot @ git+https://github.com/merisedot-dev/merise_dot", # inner library
    "PyGObject" # graphics toolkit
]

[[project.authors]]
name = "kheldae"
email = "taho.gougeon@gmail.com"

[project.optional-dependencies]
test = [ "behave" ]

[build-system]
requires = [ "hatchling", "hatch-build-scripts" ]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "merise_gtk/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [ "merise_gtk" ]

[tool.hatch.metadata]
allow-direct-references = true

[tool.bumpver]
current_version = "0.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [ 'current_version = "{version}"' ]
"merise_gtk/__init__.py" = [ '__version__ = {version}' ]

[tool.yapf]
based_on_style = "pep8"
indent_width = 4
spaces_before_comment = 1
split_before_arithmetic_operator = true
split_before_dot = true
split_before_first_argument = true
use_tabs = false
